# memorizer

./: .envrc  .gitignore  AGENTS.md  CONCEPT.md  README.md  pyproject.toml
src/: chat.py  completion.py  context.py  llm_nostream.py  memory.py  message.py  model.py  test_chat_completion.py  test_context.py  test_import_paths.py  test_memory_persistence.py  test_model_model.py
src/chat/: __init__.py  chat.py  completion.py
src/model/: __init__.py  context.py  memory.py  model.py
