[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "memorizer"
version = "0.1.0"
description = "TODO."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Marko Rosenmüller" }]
keywords = []
dependencies = [
]

[project.scripts]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["reb00t*"]
exclude = ["tests*", "docs*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]
